--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -8,8 +8,9 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@mono/lib": "workspace:^",
-    "next": "14.0.4",
+    "lodash": "^4.17.21",
+    "lodash.add": "^3.7.0",
+    "next": "14.0.3",
     "react": "^18",
     "react-dom": "^18"
   },
