--- a/lib/package.json
+++ b/lib/package.json
@@ -17,7 +17,9 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
-    "isolated-vm": "^4.6.0"
+    "isolated-vm": "^4.6.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "files": [
     "dist"
