--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -12,7 +12,8 @@
     "lodash.add": "^3.7.0",
     "next": "14.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "@mono/lib": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
