--- a/nextjs-pages/package.json
+++ b/nextjs-pages/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mono/lib": "workspace:*",
+    "isolated-vm": "^4.6.0",
     "lodash": "^4.17.21",
     "lodash.add": "^3.7.0",
     "next": "14.1.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mono/lib": "workspace:*"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/node": "^20",
