--- a/nextjs-pages/package.json
+++ b/nextjs-pages/package.json
@@ -3,8 +3,9 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
+    "build:app": "next build",
     "build:lib": "pnpm --filter \"@mono/lib\" build",
-    "build": "pnpm run build:lib && next build",
+    "build": "pnpm run build:lib && pnpm run build:app",
     "start": "next start",
     "lint": "next lint"
   },
