--- a/lib/package.json
+++ b/lib/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.7",
   "type": "module",
   "scripts": {
-    "build": "bunchee",
+    "build": "bunchee --runtime=node",
     "pkg:attw": "attw --pack .",
     "pkg:publint": "publint --strict",
     "lint-pkg": "pnpm pkg:publint && pnpm pkg:attw"
