--- a/nextjs-app/package.json
+++ b/nextjs-app/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build:lib": "pnpm --filter \"@mono/lib\" build",
+    "build:lib": "pnpm --filter \"@samijaber/isolated-vm-test\" build",
     "build": "pnpm run build:lib && next build",
     "start": "next start",
     "lint": "next lint"
@@ -14,7 +14,7 @@
     "next": "14.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "@mono/lib": "workspace:*"
+    "@samijaber/isolated-vm-test": "workspace:*"
   },
   "devDependencies": {
     "@types/node": "^20",
