--- a/nextjs-pages/package.json
+++ b/nextjs-pages/package.json
@@ -4,14 +4,14 @@
   "scripts": {
     "dev": "next dev",
     "build:app": "next build",
-    "build:lib": "pnpm --filter \"@mono/lib\" build",
+    "build:lib": "pnpm --filter \"@samijaber/isolated-vm-test\" build",
     "_build": "pnpm run build:lib && pnpm run build:app",
     "build": "pnpm run build:app",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@mono/lib": "workspace:*",
+    "@samijaber/isolated-vm-test": "workspace:*",
     "isolated-vm": "^4.6.0",
     "lodash": "^4.17.21",
     "lodash.add": "^3.7.0",
