--- a/lib/package.json
+++ b/lib/package.json
@@ -7,7 +7,7 @@
     "pkg:attw": "attw --pack .",
     "pkg:publint": "publint --strict",
     "lint-pkg": "pnpm pkg:publint && pnpm pkg:attw",
-    "publish": "pnpm publish --tag next --access public",
+    "pub": "pnpm publish --tag next --access public",
     "release": "pnpm build && pnpm publish"
   },
   "devDependencies": {
